--- a/EcomApp/src/app/pages/add-product/add-product.component.html
+++ b/EcomApp/src/app/pages/add-product/add-product.component.html
@@ -51,12 +51,15 @@
             </div>
             <h3 class="mt-4 text-sm text-gray-700">Machined Mechanical Pencil</h3>
             <p class="mt-1 text-lg font-medium text-gray-900">$35</p>
+            <div class="mt-6">
+              <button type="submit" class="w-full rounded-md border border-transparent bg-indigo-600 px-4 py-3 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-50">Checkout</button>
+            </div>
           </a>
 
           <!-- More products... -->
+
         </div>
       </section>
     </main>
   </div>
-  <div *ngIf="isMenuOpen" (click)="closeMenus()" class="fixed inset-0"></div>
 </div>
