--- a/EcomApp/src/app/pages/accueil/accueil.component.html
+++ b/EcomApp/src/app/pages/accueil/accueil.component.html
@@ -17,15 +17,18 @@
 
         <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
 
-          <button *ngFor="let prime of primes" (click)="addToCart(prime)" class="group">
+          <ng-container *ngIf="primes | async as bonPrime">
+            <button *ngFor="let prime of bonPrime" (click)="addToCart(prime)" class="group">
 
-            <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-              <img src="{{prime.image}}" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." class="h-full w-full object-cover object-center group-hover:opacity-75">
-            </div>
-            <h3 class="mt-4 text-sm text-gray-700">{{ prime.title }}</h3>
-            <p class="mt-1 text-lg font-medium text-gray-900">${{prime.price}}</p>
+              <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
+                <img src="{{prime.image}}" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <h3 class="mt-4 text-sm text-gray-700">{{ prime.title }}</h3>
+              <p class="mt-1 text-lg font-medium text-gray-900">${{prime.price}}</p>
 
-          </button>
+            </button>
+          </ng-container>
+
 
         </div>
       </section>
