--- a/EcomApp/src/app/pages/add-product/add-product.component.html
+++ b/EcomApp/src/app/pages/add-product/add-product.component.html
@@ -1,65 +1,51 @@
-<!--
-  This example requires some changes to your config:
-  
-  
-  // tailwind.config.js
-  module.exports = {
-    // ...
-    plugins: [
-      // ...
-      require('@tailwindcss/forms'),
-      require('@tailwindcss/aspect-ratio'),
-    ],
-  }
-  
--->
 <div class="bg-gray-50">
   <div>
-      <!-- Product grid -->
     <main>  
       <section aria-labelledby="products-heading" class="mx-auto max-w-2xl px-4 pt-12 pb-16 sm:px-6 sm:pt-16 sm:pb-24 lg:max-w-7xl lg:px-8">
-        <h2 id="products-heading" class="sr-only">Products</h2>
+        <h2 id="products-heading" class="sr-only">Produits</h2>
 
         <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
-          <a href="#" class="group">
-            <div class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
-              <img src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-01.jpg" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." class="h-full w-full object-cover object-center group-hover:opacity-75">
+          <ng-container *ngIf="products | async as productsbon">
+            <div *ngFor="let product of productsbon">
+              <a class="group">
+                <div class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
+                  <img [src]="product.image" alt="Person using a pen to cross a task off a productivity paper card." class="h-full w-full object-cover object-center group-hover:opacity-75">
+                </div>
+                <h3 class="mt-4 text-sm text-gray-700">{{ product.title }}</h3>
+                <p class="mt-1 text-lg font-medium text-gray-900">{{ product.price }}.-</p>
+                <div class="mt-6">
+                  <button (click)="openPopup(product.id)" class="w-full rounded-md border border-transparent bg-indigo-600 px-4 py-3 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-50">Checkout</button>
+                </div>
+              </a>
             </div>
-            <h3 class="mt-4 text-sm text-gray-700">Earthen Bottle</h3>
-            <p class="mt-1 text-lg font-medium text-gray-900">$48</p>
-          </a>
-
-          <a href="#" class="group">
-            <div class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
-              <img src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-02.jpg" alt="Olive drab green insulated bottle with flared screw lid and flat top." class="h-full w-full object-cover object-center group-hover:opacity-75">
-            </div>
-            <h3 class="mt-4 text-sm text-gray-700">Nomad Tumbler</h3>
-            <p class="mt-1 text-lg font-medium text-gray-900">$35</p>
-          </a>
-
-          <a href="#" class="group">
-            <div class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
-              <img src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-03.jpg" alt="Person using a pen to cross a task off a productivity paper card." class="h-full w-full object-cover object-center group-hover:opacity-75">
-            </div>
-            <h3 class="mt-4 text-sm text-gray-700">Focus Paper Refill</h3>
-            <p class="mt-1 text-lg font-medium text-gray-900">$89</p>
-          </a>
-
-          <a href="#" class="group">
-            <div class="aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-7 xl:aspect-h-8">
-              <img src="https://tailwindui.com/img/ecommerce-images/category-page-04-image-card-04.jpg" alt="Hand holding black machined steel mechanical pencil with brass tip and top." class="h-full w-full object-cover object-center group-hover:opacity-75">
-            </div>
-            <h3 class="mt-4 text-sm text-gray-700">Machined Mechanical Pencil</h3>
-            <p class="mt-1 text-lg font-medium text-gray-900">$35</p>
-            <div class="mt-6">
-              <button type="submit" class="w-full rounded-md border border-transparent bg-indigo-600 px-4 py-3 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-50">Checkout</button>
-            </div>
-          </a>
-
-          <!-- More products... -->
-
+          </ng-container>
         </div>
       </section>
     </main>
+  </div>
+</div>
+
+<div *ngIf="isPopupOpen" class="fixed inset-0 z-10 w-screen h-screen overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+  <div class="bg-gray-500 bg-opacity-75 transition-opacity"></div>
+  <div class="flex items-center justify-center min-h-full">
+    <div class="relative bg-white w-full max-w-lg p-6 rounded-lg shadow-xl">
+      <div class="px-4 py-5 sm:p-6">
+        <h3 class="text-base font-semibold leading-6 text-gray-900">Modifier l'article</h3>
+        <div class="mt-2 max-w-xl text-sm text-gray-500">
+          <p>Modifier le prix actuel de l'article : {{product.price}}.-</p>
+        </div>
+        <form class="mt-5 sm:flex sm:items-center">
+          <div class="w-full sm:max-w-xs">
+            <label for="price" class="sr-only">Prix :</label>
+            <input name="price" id="price" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" [value]="product.price">
+          </div>
+          <button type="submit" (click)="editProduct(product.id)" class="mt-3 inline-flex w-full items-center justify-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 sm:ml-3 sm:mt-0 sm:w-auto">Sauvegarder</button>
+        </form>
+      </div>
+
+      <button (click)="closePopup()" type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">
+        Fermer
+      </button>
+    </div>
   </div>
 </div>
