--- a/EcomApp/src/app/pages/add-product/add-product.component.html
+++ b/EcomApp/src/app/pages/add-product/add-product.component.html
@@ -15,7 +15,7 @@
               <h3 class="mt-4 text-sm text-gray-700">{{ product.title }}</h3>
               <p class="mt-1 text-lg font-medium text-gray-900">{{ product.price }}.-</p>
               <div class="mt-6">
-                <button (click)="openPopup(product.id)" class="w-full rounded-md border border-transparent bg-indigo-600 px-4 py-3 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-50">Checkout</button>
+                <button (click)="openPopup(product.id)" class="w-full rounded-md border border-transparent bg-indigo-600 px-4 py-3 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-50">Modifier</button>
               </div>
             </div>
           </ng-container>
@@ -25,22 +25,23 @@
   </div>
 </div>
 
-<div *ngIf="isPopupOpen" class="fixed inset-0 z-10 w-screen h-screen overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+<div *ngIf="isPopupOpen && product" class="fixed inset-0 z-10 w-screen h-screen overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true">
   <div class="bg-gray-500 bg-opacity-75 transition-opacity"></div>
   <div class="flex items-center justify-center min-h-full">
     <div class="relative bg-white w-full max-w-lg p-6 rounded-lg shadow-xl">
       <div class="px-4 py-5 sm:p-6">
-        <h3 class="text-base font-semibold leading-6 text-gray-900">Modifier l'article</h3>
-        <div class="mt-2 max-w-xl text-sm text-gray-500">
-          <p>Modifier le prix actuel de l'article : {{product.price}}.-</p>
-        </div>
-        <form class="mt-5 sm:flex sm:items-center">
-          <div class="w-full sm:max-w-xs">
-            <label for="price" class="sr-only">Prix :</label>
-            <input name="price" id="price" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" [value]="product.price">
+        <div *ngIf="product">
+          <h3 class="text-base font-semibold leading-6 text-gray-900">Modifier l'article</h3>
+          <div *ngIf="product | async as productData">
+            <p>Modifier le prix actuel de l'article : {{ productData.price }}.-</p>
+            <form class="mt-5 sm:flex sm:items-center">
+              <div class="w-full sm:max-w-xs">
+                <label for="price" class="sr-only">Prix :</label>
+                <input #newPriceInput type="number" id="newPrice" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" [value]="productData.price">
+              </div>
+              <button type="button" (click)="editProduct(productData.id, newPriceInput.value)" class="mt-3 inline-flex w-full items-center justify-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 sm:ml-3 sm:mt-0 sm:w-auto">Sauvegarder</button>
+            </form>            
           </div>
-          <button type="submit" (click)="editProduct(product.id)" class="mt-3 inline-flex w-full items-center justify-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 sm:ml-3 sm:mt-0 sm:w-auto">Sauvegarder</button>
-        </form>
       </div>
 
       <button (click)="closePopup()" type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">
@@ -49,3 +50,4 @@
     </div>
   </div>
 </div>
+
