Add success pop-up and update product modification logic

--- a/EcomApp/src/app/pages/add-product/add-product.component.html
+++ b/EcomApp/src/app/pages/add-product/add-product.component.html
@@ -25,6 +25,10 @@
   </div>
 </div>
 
+<div *ngIf="isSuccessPopupOpen">
+  <app-sucess-pop-up></app-sucess-pop-up>
+</div>
+
 <div *ngIf="isPopupOpen && product" class="fixed inset-0 z-10 w-screen h-screen overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true">
   <div class="bg-gray-500 bg-opacity-75 transition-opacity"></div>
   <div class="flex items-center justify-center min-h-full">
@@ -50,4 +54,3 @@
     </div>
   </div>
 </div>
-
