feat: add footer and header

--- a/EcomApp/src/app/pages/accueil/accueil.component.html
+++ b/EcomApp/src/app/pages/accueil/accueil.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 
 <div class="bg-gray-50">
 
@@ -34,8 +35,8 @@
       </section>
     </main>
 
-    <footer aria-labelledby="footer-heading" class="border-t border-gray-200 bg-white">
-      Footer
-    </footer>
+  <app-footer></app-footer>
+
+
   </div>
 </div>
