--- a/EcomApp/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/EcomApp/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -12,6 +12,7 @@
   }
   ```
 -->
+<app-navbar></app-navbar>
 <div class="bg-white">
   <div class="mx-auto max-w-2xl px-4 pb-24 pt-16 sm:px-6 lg:max-w-7xl lg:px-8">
     <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Shopping Cart</h1>
@@ -224,3 +225,4 @@
     </form>
   </div>
 </div>
+<app-footer></app-footer>
