Add delete functionality to payment component

--- a/EcomApp/src/app/pages/payment/payment.component.html
+++ b/EcomApp/src/app/pages/payment/payment.component.html
@@ -25,7 +25,7 @@
                             <div class="flex space-x-4">
                                 <button type="button" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">Modifier</button>
                                 <div class="flex border-l border-gray-300 pl-4">
-                                    <button type="button" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">Supprimer</button>
+                                    <button (click)="deleteProduct(product.id)" type="button" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">Supprimer</button>
                                 </div>
                             </div>
                         </div>
