--- a/EcomApp/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/EcomApp/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -7,7 +7,7 @@
       class="mt-12 lg:grid lg:grid-cols-12 lg:items-start lg:gap-x-12 xl:gap-x-16"
     >
       <section aria-labelledby="cart-heading" class="lg:col-span-7">
-        <h2 id="cart-heading" class="sr-only">Items in your shopping cart</h2>
+        <h2 id="cart-heading" class="sr-only">Panier d'achat</h2>
 
         <ul
           role="list"
