--- a/EcomApp/src/app/pages/accueil/accueil.component.html
+++ b/EcomApp/src/app/pages/accueil/accueil.component.html
@@ -8,24 +8,38 @@
       <div class="bg-white">
         <div class="mx-auto max-w-7xl px-4 py-16 sm:px-6 lg:px-8">
           <h1 class="text-3xl font-bold tracking-tight text-gray-900">Prime</h1>
-          <p class="mt-4 max-w-xl text-sm text-gray-700">Prime Hydration : mon coup de boost ultime ! Cette boisson a transformé mes performances. Un essentiel pour rester au top !</p>
+          <p class="mt-4 max-w-xl text-sm text-gray-700">Prime Hydration : mon coup de boost ultime ! Cette boisson a
+            transformé mes performances. Un essentiel pour rester au top !</p>
         </div>
       </div>
 
       <!-- Product grid -->
-      <section aria-labelledby="products-heading" class="mx-auto max-w-2xl px-4 pb-16 pt-12 sm:px-6 sm:pb-24 sm:pt-16 lg:max-w-7xl lg:px-8">
+      <section aria-labelledby="products-heading"
+               class="mx-auto max-w-2xl px-4 pb-16 pt-12 sm:px-6 sm:pb-24 sm:pt-16 lg:max-w-7xl lg:px-8">
         <h2 id="products-heading" class="sr-only">Products</h2>
 
         <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
 
           <ng-container *ngIf="primes">
-            <div *ngFor="let prime of primes" (click)="addToCart(prime)" class="group">
+            <div *ngFor="let prime of primes" class="group">
 
-              <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-                <img src="{{prime.image}}" alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." class="h-full w-full object-cover object-center group-hover:opacity-75">
+              <div
+                class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
+                <img src="{{prime.image}}"
+                     alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
+                     class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
-              <h3 class="mt-4 text-sm text-gray-700">{{ prime.title }}</h3>
-              <p class="mt-1 text-lg font-medium text-gray-900">${{prime.price}}</p>
+              <div class="flex">
+                <div>
+
+                  <h3 class="mt-4 text-sm text-gray-700">{{ prime.title }}</h3>
+                  <p class="mt-1 text-lg font-medium text-gray-900">{{ prime.price }}.-</p>
+                </div>
+                <button type="button" (click)="addToCart(prime)"
+                        class="mt-3 flex w-full items-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 sm:ml-3 sm:mt-0 sm:w-auto">
+                  Ajouter au panier
+                </button>
+              </div>
 
             </div>
 
@@ -36,7 +50,7 @@
       </section>
     </main>
 
-  <app-footer></app-footer>
+    <app-footer></app-footer>
 
 
   </div>
