--- a/EcomApp/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/EcomApp/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="bg-white">
   <div class="mx-auto max-w-2xl px-4 pb-24 pt-16 sm:px-6 lg:max-w-7xl lg:px-8">
     <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
@@ -10,7 +11,7 @@
         <h2 id="cart-heading" class="sr-only">Panier d'achat</h2>
 
         <ul
-          *ngFor="let prime of reduceList"
+          *ngFor="let prime of primeList"
           role="list"
           class="divide-y divide-gray-200 border-b border-t border-gray-200"
         >
@@ -64,9 +65,6 @@
         aria-labelledby="summary-heading"
         class="mt-16 rounded-lg bg-gray-50 px-4 py-6 sm:p-6 lg:col-span-5 lg:mt-0 lg:p-8"
       >
-        <h2 id="summary-heading" class="text-lg font-medium text-gray-900">
-          Order summary
-        </h2>
 
         <dl class="mt-6 space-y-4">
           <div
@@ -74,7 +72,7 @@
           >
             <dt class="text-base font-medium text-gray-900">Order total</dt>
             <dd class="text-base font-medium text-gray-900">
-              {{ totalPrice }}
+              {{ totalPrice }} .-
             </dd>
           </div>
         </dl>
