--- a/EcomApp/src/app/pages/payment/payment.component.html
+++ b/EcomApp/src/app/pages/payment/payment.component.html
@@ -14,23 +14,21 @@
     <section aria-labelledby="summary-heading" class="hidden w-full max-w-md flex-col bg-gray-50 lg:flex">
         <h2 id="summary-heading" class="sr-only">Order summary</h2>
         <ul role="list" class="flex-auto divide-y divide-gray-200 overflow-y-auto px-6">
-            <ng-container *ngIf="(products | async) as productsbon">
-                <ng-container *ngFor="let product of productsbon">
+                <ng-container *ngFor="let product of primeList">
                     <li *ngIf="product" class="flex space-x-6 py-6">
                         <img [src]="product.image" alt="" class="h-40 w-40 flex-none rounded-md bg-gray-200 object-cover object-center">
                         <div class="flex flex-col justify-between space-y-4">
                             <div class="space-y-1 text-sm font-medium">
                                 <h3 class="text-gray-900">{{ product.title }}</h3>
-                                <p class="text-gray-900">{{ product.price }} CHF</p>
+                                <p class="text-gray-900">{{ product.price * product.quantity }} CHF</p>
                             </div>
                             <div class="flex space-x-4">
                                 <div class="flex border-l border-gray-300 pl-4">
-                                    <button (click)="deleteProduct(product.id)" type="button" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">Supprimer</button>
+                                    <button (click)="deleteProduct(product.cartId)" type="button" class="text-sm font-medium text-indigo-600 hover:text-indigo-500">Supprimer</button>
                                 </div>
                             </div>
                         </div>
                     </li>
-                </ng-container>
             </ng-container>
         </ul>
         <div class="sticky bottom-0 flex-none border-t border-gray-200 bg-gray-50 p-6">
@@ -38,7 +36,7 @@
             <dl class="mt-10 space-y-6 text-sm font-medium text-gray-500">
                 <div class="flex justify-between">
                     <dt>Sous-Totale</dt>
-                    <dd class="text-gray-900">{{subtotal}} CHF</dd>
+                    <dd class="text-gray-900">{{total}} CHF</dd>
                 </div>
                 <div class="flex justify-between">
                     <dt>Livraison</dt>
@@ -46,7 +44,7 @@
                 </div>
                 <div class="flex items-center justify-between border-t border-gray-200 pt-6 text-gray-900">
                     <dt class="text-base">Total</dt>
-                    <dd class="text-base">{{total}} CHF</dd>
+                    <dd class="text-base">{{total + shipping}} CHF</dd>
                 </div>
             </dl>
         </div>
