--- a/EcomApp/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/EcomApp/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -40,7 +40,7 @@
                     </h3>
                   </div>
                   <p class="mt-1 text-sm font-medium text-gray-900">
-                    {{ prime.price }}.-
+                    {{ prime.price * prime.quantity }}.-
                   </p>
                 </div>
 
@@ -79,7 +79,7 @@
 
         <div class="mt-6">
           <button
-            type="submit"
+            [routerLink]="['/', 'payment']"
             class="w-full rounded-md border border-transparent bg-indigo-600 px-4 py-3 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-50"
           >
             Checkout
